force-app/main/default/objects/blng__InvoicePlanLine__c/blng__InvoicePlanLine__c.object-meta.xml
<CustomObject>
    <label>Invoice Plan Line</label>
    <nameField>
        <label>Invoice Plan Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>