force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__CommencementDate__c.field-meta.xml
<CustomField>
    <fullName>blng__CommencementDate__c</fullName>
    <label>Commencement Date</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CommencementDate</valueSetName>
    </valueSet>
</CustomField>