force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__CommencementDateOffset__c.field-meta.xml
<CustomField>
    <fullName>blng__CommencementDateOffset__c</fullName>
    <label>Commencement Date Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>