force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__CommencementDateOffsetUnits__c.field-meta.xml
<CustomField>
    <fullName>blng__CommencementDateOffsetUnits__c</fullName>
    <label>Commencement Date Offset Units</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CommencementDateOffsetUnits</valueSetName>
    </valueSet>
</CustomField>