force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__FlatAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__FlatAmount__c</fullName>
    <label>Flat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>