force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__InvoicePlan__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoicePlan__c</fullName>
    <label>Invoice Plan</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Invoice Plan Lines</relationshipLabel>
    <relationshipName>InvoicePlanLinesInvoicePlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>