force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__ProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>blng__ProcessingOrder__c</fullName>
    <label>Processing Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>