force-app/main/default/objects/blng__InvoicePlanLine__c/fields/blng__ServicePeriodStart__c.field-meta.xml
<CustomField>
    <fullName>blng__ServicePeriodStart__c</fullName>
    <label>Service Period Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__ServicePeriodStart</valueSetName>
    </valueSet>
</CustomField>